wip(flg): base logic of flg made, need to test it and fix
